kustomizations/perses/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perses
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: perses
  template:
    metadata:
      labels:
        app.kubernetes.io/name: perses
    spec:
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: perses
          args:
            - --config=/etc/perses/config.yaml
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/perses/config.yaml
              subPath: config.yaml
            - name: provisioning
              mountPath: /etc/perses/provisioning
            - name: dashboards
              mountPath: /etc/perses/dashboards
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 500m
      volumes:
        - name: config
          configMap:
            name: perses-config
        - name: provisioning
          configMap:
            name: perses-provisioning
        - name: dashboards
          configMap:
            name: perses-dashboards
