kustomizations/perses/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perses
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: perses
