kustomizations/perses/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perses
spec:
  parentRefs:
  - name: observability-gateway
    namespace: observability-gateway-system
    sectionName: perses
  hostnames: []
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: perses
      port: 8080
